--- a/BarberBooking/barberbooking.client/package.json
+++ b/BarberBooking/barberbooking.client/package.json
@@ -21,16 +21,25 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.13.0",
+    "@fullcalendar/angular": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.2",
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.3.3",
     "jest-editor-support": "*",
-    "run-script-os": "*"
+    "run-script-os": "*",
+    "rxjs": "~7.8.0",
+    "swiper": "^11.1.9",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.1.8",
     "@angular/cli": "~16.1.8",
     "@angular/compiler-cli": "^16.1.0",
+    "@angular/localize": "^16.1.0",
+    "@types/glider-js": "^1.7.11",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
