removed files that shouldnt be staged by git.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /BarberBooking/.vs/BarberBooking
+/BarberBooking/BarberBooking.Server/bin/Debug/net8.0
+/BarberBooking/BarberBooking.Server/obj/Debug/net8.0
