--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,6 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
-/BarberBooking/.vs/BarberBooking
-/BarberBooking/BarberBooking.Server/bin/Debug/net8.0
-/BarberBooking/BarberBooking.Server/obj/Debug/net8.0
+bin/
+obj/
+.vs/
