--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,8 @@
 node_modules/
 
 # Ignore build directories
-bin/
-obj/
+./bin
+./obj
 
 # Ignore Debug and Release build folders
 **/bin/Debug/
@@ -73,4 +73,3 @@ Thumbs.db
 # Ignore coverage reports
 coverage/
 
-# Ignore any other auto-generated or temporar
