--- a/BarberBooking/BarberBooking.Server/appsettings.json
+++ b/BarberBooking/BarberBooking.Server/appsettings.json
@@ -2,11 +2,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=.\\sqlexpress; Database=BerberBooking; Trusted_Connection=True; MultipleActiveResultSets=True;TrustServerCertificate=True"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "Jwt": {
+    "Key": "MySuperLongAndSecureKeyWithMoreThen256bytes",
+    "Issuer": "https://localhost:7030/",
+    "Audience": "https://localhost:4200/"
   },
   "AllowedHosts": "*"
 }
