Created forgot password, reset password functionality alongside EmailService for sending PasswordToken (added in db User) in confirmation mail.

--- a/BarberBooking/barberbooking.client/angular.json
+++ b/BarberBooking/barberbooking.client/angular.json
@@ -25,6 +25,7 @@
               "src/assets"
             ],
             "styles": [
+              "src/custom-theme.scss",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/swiper/swiper-bundle.min.css",
               "src/styles.css",
@@ -54,7 +55,7 @@
               "vendorChunk": true,
               "extractLicenses": false,
               "sourceMap": true,
-              "namedChunks": true
+              "namedChunks": true,
             }
           },
           "defaultConfiguration": "production"
