--- a/BarberBooking/BarberBooking.Server/BarberBooking.Server.csproj
+++ b/BarberBooking/BarberBooking.Server/BarberBooking.Server.csproj
@@ -23,16 +23,13 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
+    <PackageReference Include="twilio" Version="7.8.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\barberbooking.client\barberbooking.client.esproj">
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Files\" />
   </ItemGroup>
 
 </Project>
